--- a/todo.txt
+++ b/todo.txt
@@ -2,20 +2,13 @@
 For 1.0.0
 =========
 
-[att]
-    Match when the element sets the "att" attribute, whatever the value of the attribute. 
-[att=val]
-    Match when the element's "att" attribute value is exactly "val". 
-[att~=val]
-    Represents an element with the att attribute whose value is a white space-separated list of words, one of which is exactly "val". 
-    If "val" contains white space, it will never represent anything (since the words are separated by spaces). 
-    If "val" is the empty string, it will never represent anything either. 
-[att|=val]
-    Represents an element with the att attribute, its value either being exactly "val" or beginning with "val"
+test & ensure case insensitive
+
+make fast, do single bucket code - make SizzleDoc const
 
 5.11.1 :first-child pseudo-class
 
-   
+
 
 For Future
 ==========
