--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 
 For Future
 ==========
+Replace Regex parsings with PEG parsing 
+
 Make case insensitivity optional - see "CASE-INSENSITIVITY"
 
 allow multiple pseudo selectors, e.g. DIV:lang(en):first-child
